# WebResearch

./: .gitignore  AGENT-PORTABILITY.md  AUDIT-AUTOMATION-V3.md  CHANGELOG.md  CODEX-GUIDE.md  CODEX-MAPPING.md  CODEX-PORTING-PLAN.md  CODEX-QUICKSTART.md  IMPROVEMENT-REPORT.md  PIPELINE_UPDATE_REPORT.md  README.md  REVIEW-REPORT-V2.md  REVIEW-REPORT.md  SESSION-REPORT.md  SETUP-GUIDE.md  USER_MANUAL.md  agency-ai-agent-plan-review-report.md  agency-ai-agent-plan.md  install.sh  web-audit-agent-plan-review-report.md  web-audit-agent-plan-revision-report.md  web-audit-agent-plan.md
audit-runtime/: README.md  pyproject.toml
audit-runtime/src/webstart_audit/: cli.py
codex-skills/webstart/: SKILL.md
examples/: README.md
examples/sample-audit/_agency/: client-brief.md
examples/sample-audit/_audit/: report.md
scripts/: lint-docs.sh  setup-audit-runtime.sh
skills/audit/: SKILL.md
skills/audit-db/: SKILL.md
skills/audit-ia/: SKILL.md
skills/audit-tech/: SKILL.md
skills/audit-ux/: SKILL.md
skills/be/: SKILL.md
skills/contract/: SKILL.md
skills/design/: SKILL.md
skills/devops/: SKILL.md
skills/fe/: SKILL.md
skills/pm/: SKILL.md
skills/qa-check/: SKILL.md
skills/webstart/: SKILL.md
