[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webstart-audit-runtime"
version = "0.1.0"
description = "Reusable audit runtime for WebStart website analysis pipelines"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.52,<2",
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "httpx>=0.27,<1",
]

[project.scripts]
webstart-audit = "webstart_audit.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
